relaxed VC type check